--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,6 @@ local/*
 apps/*/fixtures/*
 !test.json
 
-content/banners/*
-!touch
-
-content/documents/*
-!touch
-
-content/images/*
-!touch
-
-content/slides/*
+content/**/*
 !touch
 
